Add Steam window manager script for Friends List
- Created steam-window-manager.sh to automatically position and resize Steam Friends List
- Friends List opens at 400px width on the left side of main Steam window
- Uses Hyprland IPC socket2 to listen for window open events
- Simplified Steam window rules (removed pseudo/float/group attempts)
- Added script to Hyprland startup in exec.conf

--- a/dot_config/hypr/configs/exec.conf.tmpl
+++ b/dot_config/hypr/configs/exec.conf.tmpl
@@ -39,4 +39,7 @@ exec-once = swaync
 exec-once = gtk-launch slack
 {{ end }}
 
+# Steam window manager
+exec-once = /home/mason/.config/hypr/scripts/steam-window-manager.sh > /tmp/steam-window-manager.log 2>&1
+
 
