--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -5,6 +5,7 @@
     font-size: 14px;
     font-family: "SF Pro Text", sans-serif;
     font-weight: normal;
+    min-height: 0;
 }
 
 window#waybar {
@@ -27,10 +28,7 @@ window#waybar {
     border-radius: 8px;
     background: alpha(@background, 0.9);
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-    padding-top: 1px;
-    padding-bottom: 1px;
-    padding-left: 8px;
-    padding-right: 8px;
+    padding: 4px 8px;
 }
 
 .modules-center {
