fix: package reg

--- a/dot_config/fish/config.fish.tmpl
+++ b/dot_config/fish/config.fish.tmpl
@@ -32,6 +32,9 @@ end
 # Note: Most environment variables and PATH are set via conf.d/environment.fish
 # which sources ~/.config/environment (shared with bash)
 
+# Homebrew paths
+fish_add_path /home/linuxbrew/.linuxbrew/bin /home/linuxbrew/.linuxbrew/sbin
+
 # System binaries
 fish_add_path /usr/sbin /sbin
 
