--- a/dot_config/hypr/configs/binds.conf.tmpl
+++ b/dot_config/hypr/configs/binds.conf.tmpl
@@ -5,6 +5,7 @@ bind=$mainMod, C, killactive,
 bind=$mainMod, E, exec, nautilus
 bind=$mainMod, V, togglefloating, 
 bind=$mainMod, R, exec, ~/.config/wofi/launch-drun.sh
+bind=$mainMod, Period, exec, bemoji -t
 bind=$mainMod, P, pseudo, # dwindle
 bind=$mainMod, J, togglesplit, # dwindle
 bind=$mainMod, F, fullscreen,
@@ -48,11 +49,11 @@ bind=$mainMod SHIFT, EQUAL, movecurrentworkspacetomonitor, -1
 bind=$mainMod SHIFT, MINUS, movecurrentworkspacetomonitor, +1
 bind=$mainMod, mouse_down, workspace, e+1
 bind=$mainMod, mouse_up, workspace, e-1
-bind=, Print, exec, /home/{{ .chezmoi.username }}/scripts/snip
-bind=SHIFT, Print, exec, /home/{{ .chezmoi.username }}/scripts/record
+bind=, Print, exec, /home/mason/scripts/snip
+bind=SHIFT, Print, exec, /home/mason/scripts/record
 bind=$mainMod, L, exec, hyprlock 
 bind=$mainMod, M, exec, ~/.config/wofi/power-menu.sh
-bind=$mainMod, T, exec, /home/{{ .chezmoi.username }}/scripts/hyprland-theme-toggle/theme-toggle-modular.sh
+bind=$mainMod, T, exec, /home/mason/scripts/hyprland-theme-toggle/theme-toggle-modular.sh
 bind=$mainMod, N, exec, swaync-client -t -sw
 bind=$mainMod, XF86AudioPlay, exec, ~/.config/wofi/change-default-audio-device.js WofiListAudioDevices
 bindl=, XF86AudioPlay, exec, ~/.config/swaync/scripts/media-osd.sh play-pause
