varios qol updates

--- a/dot_config/hypr/configs/binds.conf.tmpl
+++ b/dot_config/hypr/configs/binds.conf.tmpl
@@ -53,7 +53,7 @@ bind=, Print, exec, /home/mason/scripts/snip
 bind=SHIFT, Print, exec, /home/mason/scripts/record
 bind=$mainMod, L, exec, hyprlock 
 bind=$mainMod, M, exec, ~/.config/wofi/power-menu.sh
-bind=$mainMod, T, exec, /home/mason/scripts/hyprland-theme-toggle/theme-toggle-modular.sh
+bind=$mainMod, T, exec, lmtt toggle 
 bind=$mainMod, N, exec, swaync-client -t -sw
 bind=$mainMod, XF86AudioPlay, exec, ~/.config/wofi/change-default-audio-device.js WofiListAudioDevices
 bindl=, XF86AudioPlay, exec, ~/.config/swaync/scripts/media-osd.sh play-pause
