fix: gnome-keyring auto-unlock + sync greetd configs
- Fix hardcoded UID in uwsm/env.tmpl (use chezmoi.uid template)
- Add gnome-keyring SSH component start to hypr exec.conf
- Sync greetd configs from /etc/greetd to chezmoi:
  - hypr.conf.tmpl: templated monitor config (is_work conditional)
  - mode-desktop.toml: regreet + LIBSEAT_BACKEND=seatd fix
  - regreet-launcher.sh: debug logging version
  - focus-listener.sh: new file for monitor focus handling
  - Delete obsolete gtkgreet.css

--- a/dot_config/hypr/configs/exec.conf.tmpl
+++ b/dot_config/hypr/configs/exec.conf.tmpl
@@ -8,6 +8,8 @@
 exec-once = dbus-update-activation-environment --all
 exec-once=sleep 1 & dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user start hyprpolkitagent
+# Start gnome-keyring SSH component (secrets/pkcs11 started by PAM)
+exec-once = gnome-keyring-daemon --start --components=ssh
 exec-once = /home/mason/.config/hypr/configs/monitors.sh > /home/mason/.config/hypr/logs/monitors.log 2>&1
 
 exec-once=/home/mason/.config/hypr/idle.sh
