--- a/dot_config/uwsm/env.tmpl
+++ b/dot_config/uwsm/env.tmpl
@@ -1,6 +1,6 @@
 # GNOME Keyring environment variables for automatic unlock
-export GNOME_KEYRING_CONTROL=/run/user/1000/keyring
-export SSH_AUTH_SOCK=/run/user/1000/keyring/ssh
+export GNOME_KEYRING_CONTROL=/run/user/{{ .chezmoi.uid }}/keyring
+export SSH_AUTH_SOCK=/run/user/{{ .chezmoi.uid }}/keyring/ssh
 
 # Theme and toolkit variables
 export WALLPAPER_PATH={{ .wallpaper }}
